# tian-flow

./: .env.example  =5.17.0  API_EXECUTION_UI_IMPROVEMENTS.md  API_MANAGEMENT_INTEGRATION_REPORT.md  DATABASE_MANAGEMENT_MIGRATION.md  DIALOG_WIDTH_IMPROVEMENTS.md  Dockerfile  EMBEDDING_MODELS_README.md  GRAPH_RAG_AGENT_INTEGRATION_SUMMARY.md  Makefile  PLANNER_ERROR_FIX.md  README.md  RESOURCE_DISCOVERY_COMPLETE_SUMMARY.md  RESOURCE_DISCOVERY_DESIGN.md  RESOURCE_DISCOVERY_README.md  SETTINGS_UI_IMPROVEMENTS.md  TEXT2SQL_DATABASE_DESIGN.md  TEXT2SQL_README.md  VANNA_INTEGRATION_FIX.md  analyze_text2sql_resources.py  api_interface_comparison.md  cancel_task.py  check_celery_tasks.py  check_database.py  check_db.py  check_final_vectors.py  check_task_status.py  check_text2sql_status.py  check_vanna_data.py  check_vanna_table.py  conf.yaml.example  config_based_vectorization.py  create_test_datasource.py  debug_connection.py  debug_coordinator.py  debug_vector.py  direct_query_test.py  docker-compose.yml  find_vanna_table.py  gpt-o3.md  (+76 more)
config/: resource-discovery.yaml
docs/: graph-rag-agent-integration.md  researcher_tools_integration.md
frontend/resource-discovery-admin/: README.md  next.config.js  package.json
src/: app.py  celery_app.py
src/agents/: __init__.py  agents.py  langgraph_data_analyst.py  simple_data_analyst.py
src/api/: resource_discovery.py
src/config/: __init__.py  agents.py  branding.py  configuration.py  database.py  langsmith.py  report_style.py  resource_discovery.py  settings.py  tools.py
src/database/: __init__.py  neo4j_init_schema.cypher  trigger_generator.py
src/graph/: builder.py  nodes.py  types.py
src/llms/: __init__.py  embedding.py  reranker.py
src/models/: __init__.py  database_datasource.py  knowledge_graph.py  text2sql.py
src/prompts/: coordinator.md  data_analyst.md  planner.md  reporter.md  researcher.md  template.py
src/rag/: __init__.py  builder.py  graph_rag_agent.py
src/repositories/: database_datasource.py  knowledge_graph.py  neo4j_graph.py  text2sql.py
src/schemas/: __init__.py  api_requests.py  chat_request.py  database_datasource_request.py  text2sql_request.py
src/server/: app.py  (+1 more)
web/: .env.example  Dockerfile  README.md  build-docker.sh  eslint.config.js  next.config.js  package.json  pnpm-lock.yaml  test-language-switch.html
(+185 files in other folders)
